--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   # - title: "Portfolio"
   #  url: /portfolio/
         
-  # - title: "Blog Posts"
-  #  url: /year-archive/
+  - title: "Working Paper"
+    url: /workingpaper/
     
   - title: "CV&Contact"
     url: /cv&contact/  
