--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Zengxi Hu/胡增玺"
 title_separator          : "-"
 name                     : &name "Zengxi Hu/胡增玺"
-description              : &description "Ph.D. Candidate in School of Economics, Zhejiang University"
+description              : &description "Ph.D. Candidate, School of Economics, Zhejiang University"
 url                      : https://bosshu1212.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "bosshu1212/bosshu1212.github.io"
