--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zengxi Hu"
   avatar           : "profile.JPG"
-  bio              : "Ph.D. Candidate of School of Economics, Zhejiang University"
+  bio              : "Ph.D. Candidate in School of Economics, Zhejiang University"
   location         : "Hangzhou, China"
   employer         :
   pubmed           : 
